<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_create_account"
    android:name="uw.tacoma.edu.hobbyfinder.LogInFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".CreateAccountFragment">

    <!--Text view of App title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/TextColor"
        android:ems="20"/>

    <!--First name can enter or take from facebook-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        style="@style/TextColor"
        android:id="@+id/create_name" />

    <!--email can enter or take from facebook-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:id="@+id/create_email"
        style="@style/TextColor"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender_hint"
        style="@style/TextColor"
        android:id="@+id/create_gender" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hometown_hint"
        style="@style/TextColor"
        android:id="@+id/create_hometown" />

    <Button
        android:id="@+id/add_hobbies_frag_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/add_hobbies"
        android:onClick="launch"/>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/add_account_frag_button"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/add_account_text" />
</LinearLayout>
