<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="diabai.uw.tacoma.edu.hobbyfinder.UserProfileFragment">

    <com.facebook.login.widget.ProfilePictureView
        android:id="@+id/profile_image_profile_frag"
        android:layout_width="177dp"
        android:layout_height="166dp"
        android:scrollbarSize="@dimen/com_facebook_profilepictureview_preset_size_large"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        style="@style/TextColor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/profile_user_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextColor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/profile_gender"/>

    <TextView
        android:id="@+id/profile_hometown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextColor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        style="@style/TextColor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/email_body_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textMultiLine"
        style="@style/TextColor"
        android:lines="5" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/email_user"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="emailUser"
        android:text="@string/email_user" />

</LinearLayout>
